-------
v2.30.6
-------




-------
v2.30.5
-------

[mjr] Fix possible memory leak from unclosed stream (PR #18, Christoph Wurst
      <christoph@winzerhof-wurst.at>).
|+


-------
v2.30.4
-------

[mjr] Fix deprecated optional parameters in PHP 8
      (christoph@winzerhof-wurst.at).
|+


-------
v2.30.3
-------

[mjr] Fix removing fetch query labels in PHP 8 (PR #12, Ralf
      Becker<rb@egroupware.org>).


-------
v2.30.2
-------

[mjr] Remove redundant array_diff that could cause removal of emails from local
      message cache (PR #3, Silvio Zimmer <silvio.zimmer@die-kinderwelt.com>).


-------
v2.30.1
-------

[mjr] PHP 7.4 compatibility fixes (Remi Collet <remi@famillecollet.com>, PR
      #9).


-------
v2.30.0
-------

[mjr] Fix removing fetch query labels in PHP 8 (PR #12, Ralf
      Becker<rb@egroupware.org>)
[mjr] Remove redundant array_diff that could cause removal of emails from local
      message cache (PR #3, Silvio Zimmer <silvio.zimmer@die-kinderwelt.com>).
[mjr] Support returning entire thread list (Ticket #14943,
      mariusz.goch@spacja.com).


--------
v2.29.18
--------

[mjr] Fix LIST-STATUS parsing when using wildcards (Bug #14937,
      mariusz.goch@spacja.com).


--------
v2.29.17
--------

[mjr] Fix SORT and THREAD commands when UTF8=ACCEPT.
[mjr] Provide SASL PLAIN authentication as another user (Marco Favero
      <m.faverof@gmail.com>, PR #7).
[jan] Fix warning with PHP 7.3 (Eloy Lafuente (stronk7) <stronk7@moodle.org>,
      PR 6).


--------
v2.29.16
--------

[mjr] Allow searching by DateTime as well as Date (PR #3, Robin Appelman
      <robin@icewind.nl>).
[mjr] Fix corruption of search terms due to sticky reference (PR #2).
[mjr] Fix retrying FETCH after an UNKNOWN-CTE error in certain cases (PR #1,
      stefanolaf).
[mjr] Fix fatal error in dealing with certain exceptions.


--------
v2.29.15
--------

[jan] Fix expunging cache entries of a certain lifetime from the DB backend.


--------
v2.29.14
--------
