@@ -12,7 +12,7 @@
         }
     ],
     "version": "2.30.6",
-    "time": "2022-05-15",
+    "time": "2022-06-25",
     "repositories": [
         {
             "type": "pear",
